Лаб 4/tests/semantic_errors/error2_wrong_function_args.listlang
function test(a, b) {
    return a + b;
}
result = test(1);